1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* rdwr.c: Add #include <sys/mman.h> for munmap decl.
	* enc.c: Likewise.
	* copy.c: Likewise.
	* gunzip.c: Likewise.
	* bunzip2.c: Likewise.

1999-07-08  Roland McGrath  <roland@baalperazim.frob.com>

	* remap.c (remap_open): Recognize "N+" syntax in block list as from
	block N through the end of the store.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* bunzip2.c (bunzip2): Use munmap instead of vm_deallocate.
	(store_bunzip2_create): Likewise.
	* rdwr.c (store_read): Likewise.
	* gunzip.c (gunzip): Likewise.
	(store_gunzip_create): Likewise.
	* enc.c (store_enc_dealloc): Likewise.
	* copy.c (copy_cleanup): Likewise.

1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>

	* remap.c (remap_open): Don't multiply by 512.  Offsets and sizes are
	in blocks, not bytes.

	* stripe.c (concat_decode): Add __attribute__((unused)) to suppress
	warning.
	(ileave_decode): Likewise.

	* bunzip2.c: Add extern decl for do_bunzip2.

1999-05-16  Roland McGrath  <roland@baalperazim.frob.com>

	* remap.c (remap_decode): Add attribute((unused)) to suppress warning.

1999-05-14  Roland McGrath  <roland@baalperazim.frob.com>

	* remap.c (remap_open, remap_validate_name): New functions, to support
	parsing block lists a la GRUB.
	(store_remap_class): Initialize those slots.

1999-05-01  Mark Kettenis  <kettenis@gnu.org>

	* device.c (store_device_create): Deal with devices that return
	sucessfully from device_get_status, but do not return any sensible
	information.

1998-09-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* bunzip2.c: New file.
	* store.h (store_bunzip2_create): New declarations.
	(store_bunzip2_open): Likewise.
	(store_bunzip2_class): Likewise.
	* std.c (store_std_classes): Add store_bunzip2_class.
	* Makefile (SRCS): Add bunzip2.c.
	(UNZIP_OBJS): Add do-bunzip2.o.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* store.h: Remove defns of STORAGE_*, now in <hurd/hurd_types.h>.
